[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontPoints.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Images/interface/weapon_temperature_128px.png" type="Texture" id=3]
[ext_resource path="res://Images/interface/progress.png" type="Texture" id=4]
[ext_resource path="res://Images/interface/weapon_speedtime_128px.png" type="Texture" id=5]

[node name="HUD" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="WaveLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 520.0
margin/top = 552.0
margin/right = 640.0
margin/bottom = 568.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Wave: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_group_":true }

[node name="Wave" type="Label" parent="WaveLabel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 0.0
margin/right = 96.0
margin/bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PointLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 8.0
margin/right = 120.0
margin/bottom = 24.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Points:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_group_":true }

[node name="Points" type="Label" parent="PointLabel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 110.0
margin/top = 0.0
margin/right = 134.0
margin/bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Progress" type="Sprite" parent="."]

transform/pos = Vector2( 528, 8 )
texture = ExtResource( 3 )
centered = false

[node name="ProgressBar" type="TextureProgress" parent="Progress"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 13.0
margin/right = 101.0
margin/bottom = 22.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 4 )
radial_fill/initial_angle = 30.0
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="ProgressBar1" type="TextureProgress" parent="Progress"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 29.0
margin/top = 25.0
margin/right = 98.0
margin/bottom = 29.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 5 )
radial_fill/initial_angle = 30.0
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )


